Fix: 修复单元测试编译错误和测试失败
- 修复AuditAspectTest静态方法mock问题和不必要的stubbing
- 修复WebConfigTest拦截器注册mock
- 修复DataInitializerTest使用ReflectionTestUtils设置配置值
- 修复UserControllerTest权限不足消息匹配
- 修复UserContextTest不必要的stubbing
- 修复DictationTaskControllerTest非void方法mock
- 修复DictationTaskServiceTest状态期望错误
- 删除重复的README.md文件，保留readme.md
- 添加aspect/config/util包单元测试

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>